versioned_docs/version-4.0/server/configuration/etl-configuration.mdx
---
title: "Configuration: ETL Options"
hide_table_of_contents: true
sidebar_label: ETL Configuration
sidebar_position: 8
---

import Admonition from '@theme/Admonition';
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import CodeBlock from '@theme/CodeBlock';
import LanguageSwitcher from "@site/src/components/LanguageSwitcher";
import LanguageContent from "@site/src/components/LanguageContent";

# Configuration: ETL Options

## ETL.SQL.CommandTimeoutInSec

Number of seconds after which the SQL command will timeout.

- **Type**: `int`
- **Default**: `null` (use provider default)
- **Scope**: Server-wide or per database



## ETL.ExtractAndTransformTimeoutInSec

Number of seconds after which extraction and transformation will end and loading will start.

- **Type**: `int`
- **Default**: `60`
- **Scope**: Server-wide or per database



## ETL.MaxNumberOfExtractedDocuments

Max number of extracted documents in an ETL batch.

- **Type**: `int`
- **Default**: `null`
- **Scope**: Server-wide or per database

If value is not set, or set to null, the number of extracted documents is infinite per ETL batch 



## ETL.MaxFallbackTimeInSec

Maximum number of seconds the ETL process will be in a fallback mode after a load connection failure to a destination. The fallback mode means suspending the process.

- **Type**: `int`
- **Default**: `900`
- **Scope**: Server-wide or per database


